# automodeROS

./: .gitignore  LICENSE  README.md  README.txt  condition_categories_config.json  edgeCategories.json  generate_aruco_marker.py  launch_output.txt  mission_foraging_debug_log.txt  mission_foraging_log.txt  nodeCategories.json  requirements.txt  requirements_real.txt
PDF/: README.md
additionalFiles/: ground_extended_slope.sdf  tf_broadcaster_launch.py
additionalFiles/control_nodes/: bumper_processing_node.py
additionalFiles/launch/: full_turtlebot4_simulation.launch.py
additionalFiles/sensor_nodes/: light_sensors_node.py
additionalFiles/tb4_control/control_nodes/: cliff_processing_node.py  lidar_processing_node.py
additionalFiles/worlds/: ground.sdf  ground_plane_arena.stl  ground_stl.sdf  walls.sdf
install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
irace/: README.md  fsm_rules.yaml  instances.txt  irace_foraging.py  parameters.txt  requirements.md  run_irace.R  scenario.txt  target-runner
log/: latest_build
scripe/: fsm_configs.txt  install.txt  start_env.sh
scripts/: README.md  analyze_flocking.py  analyze_recruitment.py  heatmap_positions.py  plot_positions.py  plot_rg_comparison.py  plot_trajectories_all.py  plot_trajectories_flocking.py  run_irace.R
src/automode_controller/: README.md  package.xml  setup.cfg  setup.py
src/automode_controller/automode_controller/: __init__.py  behavior_node.py  bt_leaves.py  bt_parser.py  condition_node.py  controller_bt_node.py  controller_node.py  fsm.py  ref_model_epuck_wb.py  ref_model_turtlebot4.py  ref_model_turtlebot4_gz.py  ref_model_turtlebot4_gz_nav.py  ref_model_turtlebot4_real.py  ref_model_turtlebot4_wb.py
src/automode_controller/automode_controller/modules/: __init__.py
src/automode_controller/automode_controller/modules/behaviors/: behavior_anti-phototaxis.py  behavior_attraction.py  behavior_exploration.py  behavior_interface.py  behavior_phototaxis.py  behavior_repulsion.py  behavior_stop.py
src/automode_controller/automode_controller/modules/conditions/: condition_black_floor.py  condition_inverted_neighbours_count.py  condition_neighbour_count.py  conditions_interface.py
src/automode_controller/automode_controller/tools/: action_test_node.py
src/automode_controller/launch/: automode_epuck.launch.py  automode_simulator.launch.py  automode_tb4.launch.py  automode_tb4_real.launch.py  config_aggregation.yaml  config_dispersion.yaml  config_flocking.yaml  config_foraging.yaml  config_recruitment.yaml  config_turt_gz_foraging.yaml
src/automode_interfaces/: CMakeLists.txt  README.md  package.xml
src/automode_interfaces/action/: Condition.action
src/automode_interfaces/msg/: RobotState.msg
src/automode_tb4_sim/: README.md  package.xml  setup.cfg  setup.py
src/automode_tb4_sim/automode_tb4_sim/launch/: add_turtlebot4_simulation.launch.py  full_turtlebot4_simulation.launch.py  mission_foraging.launch.py  multiTurt_sim.launch.py  secondTurt.launch.py  tf_broadcaster_launch.py  turtlebot4_simulation.launch.py  turtlebot4_simulation_launch.py
src/automode_tb4_sim/automode_tb4_sim/tb4_control/control_nodes/: ir_processing_node.py  light_processing_node.py
src/automode_tb4_sim/automode_tb4_sim/tb4_control/sensor_nodes/: cliff_sensors_node.py  ground_sensor_node.py  ir_sensors_node.py  light_sensors_node.py  neighbour_sensor_node.py
src/automode_tb4_sim/automode_tb4_sim/worlds/: arena.sdf  ground_plane_arena_2.stl  ground_plane_arena_3.stl  mission.sdf  object.sdf  white.sdf
src/automode_tools/: README.md  package.xml  setup.cfg  setup.py
src/automode_tools/automode_tools/: action_test_node.py  behavior_categories_creator.py  behavior_test_node.py  categories_creator.py  condition_categories_creator.py  condition_test_node.py  epuck_topic_inspector  epuck_topic_inspector.py  group_evaluator.py  light.py  position_collector.py  positon.py  robotState_test_pub.py  scorer_node_aggregation.py  scorer_node_foraging.py  simulator.py  timer_shutdown.py  vicon_terminal_viz_node.py
src/automode_tools/launch/: start_aggregation.launch.py  start_all.launch.py  start_dispersion.launch.py  start_flocking.launch.py  start_foraging.launch.py  start_recruitment.launch.py
src/basic_modules/: CMakeLists.txt  README.md  package.xml  setup.cfg  setup.py
src/basic_modules_old/: README.md  package.xml  setup.py
src/vicon_receiver/: CMakeLists.txt  README.md  package.xml
src/vicon_receiver/msg/: Position.msg
(+187 files in other folders)
